# finalproject_Nosov_M25-555

./: .gitignore  README.md  demo.cast  demo.cast1  demo.castfinal  demo_final.cast  pyproject.toml
data/: portfolios.json  users.json
src/valutatrade_hub/: decorators.py  main.py
src/valutatrade_hub/cli/: interface.py
src/valutatrade_hub/core/: currencies.py  exceptions.py  models.py  usecases.py  utils.py
src/valutatrade_hub/infra/: logging_config.py  settings.py
src/valutatrade_hub/parser_service/: api_clients.py  config.py  scheduler.py  storage.py  updater.py
